--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     >
-    <ImageView
-        android:id="@+id/appicon"
+    <TableLayout
+		android:id="@+id/counters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/app"
-        />
+        >
+    </TableLayout>
 </LinearLayout>
