--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -10,4 +10,46 @@
         android:layout_height="wrap_content"
         >
     </TableLayout>
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:id="@+id/config"
+            android:text="@string/empty_config"
+            android:gravity="center_horizontal"
+            android:layout_weight="0"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            />
+        <TextView
+            android:id="@+id/log"
+            android:text=""
+            android:layout_weight="1"
+            android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
+            />
+        <LinearLayout
+            android:layout_weight="0"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <Button
+                android:id="@+id/roll"
+                android:text="@string/roll"
+                android:layout_weight="1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                />
+            <Button
+                android:id="@+id/reset"
+                android:text="@string/reset"
+                android:layout_weight="1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
