--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -23,6 +23,14 @@
             android:layout_height="wrap_content"
             style="@style/config"
             />
+        <TextView
+            android:id="@+id/range"
+            android:text=""
+            android:layout_weight="0"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            style="@style/range"
+            />
         <ScrollView
             android:layout_weight="1"
             android:layout_height="fill_parent"
