Set focus initially on the Roll button.
Without this, the focus is initially set on the edit field for the d2,
and on the HTC Hero this pops up a soft keyboard every time you go into
the app, which is a bit offputting.

--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     >
     <TableLayout
-		android:id="@+id/counters"
+        android:id="@+id/counters"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         >
@@ -64,7 +64,10 @@
                 android:layout_weight="1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                />
+                android:focusableInTouchMode="true"
+                >
+                <requestFocus/>
+            </Button>
             <Button
                 android:id="@+id/reset"
                 android:text="@string/reset"
