--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -4,12 +4,17 @@
     android:layout_height="fill_parent"
     android:orientation="horizontal"
     >
-    <TableLayout
-        android:id="@+id/counters"
+    <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         >
-    </TableLayout>
+        <TableLayout
+            android:id="@+id/counters"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            >
+        </TableLayout>
+    </ScrollView>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
