--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -42,19 +42,51 @@
             android:layout_height="wrap_content"
             style="?android:attr/progressBarStyleHorizontal"
             />
-        <ScrollView
+        <RadioGroup
+            android:layout_weight="0"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+            <RadioButton
+                android:id="@+id/show_results"
+                android:text="@string/results"
+                android:layout_weight="1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                />
+            <RadioButton
+                android:id="@+id/show_presets"
+                android:text="@string/presets"
+                android:layout_weight="1"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                />
+        </RadioGroup>
+        <ViewFlipper
+            android:id="@+id/preset_flipper"
             android:layout_weight="1"
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             >
-            <TableLayout
-                android:id="@+id/log"
-                android:layout_width="fill_parent"
+            <ScrollView
                 android:layout_height="fill_parent"
-                android:stretchColumns="0, 1, 2"
+                android:layout_width="fill_parent"
                 >
-            </TableLayout>
-        </ScrollView>
+                <TableLayout
+                    android:id="@+id/log"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:stretchColumns="0, 1, 2"
+                    >
+                </TableLayout>
+            </ScrollView>
+            <ListView
+                android:id="@+id/presets"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+        </ViewFlipper>
         <TextView
             android:id="@+id/result"
             android:text=""
