--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -83,7 +83,7 @@
             </ScrollView>
             <ListView
                 android:id="@+id/presets"
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 />
         </ViewFlipper>
