--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -49,15 +49,15 @@
             android:orientation="horizontal"
             >
             <RadioButton
-                android:id="@+id/show_results"
-                android:text="@string/results"
+                android:id="@+id/show_presets"
+                android:text="@string/presets"
                 android:layout_weight="1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 />
             <RadioButton
-                android:id="@+id/show_presets"
-                android:text="@string/presets"
+                android:id="@+id/show_results"
+                android:text="@string/results"
                 android:layout_weight="1"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
@@ -69,6 +69,25 @@
             android:layout_height="fill_parent"
             android:layout_width="fill_parent"
             >
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical"
+                >
+                <Spinner
+                    android:id="@+id/profiles"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0"
+                    android:prompt="@string/profiles"
+                    />
+                <ListView
+                    android:id="@+id/presets"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    />
+            </LinearLayout>
             <ScrollView
                 android:layout_height="fill_parent"
                 android:layout_width="fill_parent"
@@ -81,11 +100,6 @@
                     >
                 </TableLayout>
             </ScrollView>
-            <ListView
-                android:id="@+id/presets"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                />
         </ViewFlipper>
         <TextView
             android:id="@+id/result"
