Minor layout tweaks to the counter text boxes.

--- a/android/res/layout/counter.xml
+++ b/android/res/layout/counter.xml
@@ -9,6 +9,8 @@
         android:id="@+id/counter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="right"
+        android:minEms="2"
         android:numeric="integer"
         android:selectAllOnFocus="true"
         android:text="0"
