--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -101,14 +101,53 @@
                 </TableLayout>
             </ScrollView>
         </ViewFlipper>
-        <TextView
-            android:id="@+id/result"
-            android:text=""
+        <LinearLayout
             android:layout_weight="0"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            style="@style/result"
-            />
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:id="@+id/result_log4"
+                android:text=""
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                style="@style/result_log"
+                />
+            <TextView
+                android:id="@+id/result_log3"
+                android:text=""
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                style="@style/result_log"
+                />
+            <TextView
+                android:id="@+id/result_log2"
+                android:text=""
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                style="@style/result_log"
+                />
+            <TextView
+                android:id="@+id/result_log1"
+                android:text=""
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                style="@style/result_log1"
+                />
+            <TextView
+                android:id="@+id/result"
+                android:text=""
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                style="@style/result"
+                />
+        </LinearLayout>
         <LinearLayout
             android:layout_weight="0"
             android:layout_width="fill_parent"
