--- a/android/res/layout/dx.xml
+++ b/android/res/layout/dx.xml
@@ -2,14 +2,18 @@
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingRight="4dip"
     >
-    <ImageButton
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/dx_sides"
+        android:layout_width="48dip"
         android:layout_height="wrap_content"
         android:layout_weight="0"
+        android:gravity="right"
+        android:numeric="integer"
+        android:selectAllOnFocus="true"
+        android:text="3"
         />
     <EditText
-        android:id="@+id/counter"
+        android:id="@+id/dx"
         android:layout_width="48dip"
         android:layout_height="wrap_content"
         android:layout_weight="0"
