--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -7,6 +7,7 @@
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0"
         >
         <TableLayout
             android:id="@+id/counters"
@@ -18,6 +19,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_weight="1"
         android:orientation="vertical"
         >
         <TextView
