--- a/android/res/layout/dx.xml
+++ b/android/res/layout/dx.xml
@@ -1,4 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    third: That's How I Roll Dice
+        A dice roller for roleplaying nerds.
+            http://swords.id.au/third/
+
+    Copyright (c) 2010, Brendan Jurd <bj@swords.id.au>
+    All rights reserved.
+
+    third is open-source, licensed under the Simplified BSD License, a copy of
+    which can be found in the file LICENSE at the top level of the source code.
+    -->
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
     android:paddingRight="4dip"
     >
