--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -10,180 +10,200 @@
     third is open-source, licensed under the Simplified BSD License, a copy of
     which can be found in the file LICENSE at the top level of the source code.
     -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="horizontal"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
     >
-    <ScrollView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        >
-        <TableLayout
-            android:id="@+id/counters"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
-        </TableLayout>
-    </ScrollView>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/main_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:orientation="vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         >
-        <TextView
-            android:id="@+id/config"
-            android:text="@string/empty_config"
+        <ScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_weight="0"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            style="@style/config"
-            />
-        <TextView
-            android:id="@+id/range"
-            android:text=""
-            android:layout_weight="0"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            style="@style/range"
-            />
-        <ProgressBar
-            android:id="@+id/result_bar"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            style="?android:attr/progressBarStyleHorizontal"
-            />
-        <RadioGroup
-            android:layout_weight="0"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
             >
-            <RadioButton
-                android:id="@+id/show_presets"
-                android:text="@string/presets"
-                android:layout_weight="1"
-                android:layout_width="fill_parent"
+            <TableLayout
+                android:id="@+id/counters"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
-            <RadioButton
-                android:id="@+id/show_results"
-                android:text="@string/results"
-                android:layout_weight="1"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                />
-        </RadioGroup>
-        <ViewFlipper
-            android:id="@+id/preset_flipper"
-            android:layout_weight="1"
-            android:layout_height="fill_parent"
-            android:layout_width="fill_parent"
-            >
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:orientation="vertical"
                 >
-                <Spinner
-                    android:id="@+id/profiles"
+            </TableLayout>
+        </ScrollView>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            >
+            <TextView
+                android:id="@+id/config"
+                android:text="@string/empty_config"
+                android:layout_weight="0"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                style="@style/config"
+                />
+            <TextView
+                android:id="@+id/range"
+                android:text=""
+                android:layout_weight="0"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                style="@style/range"
+                />
+            <ProgressBar
+                android:id="@+id/result_bar"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                style="?android:attr/progressBarStyleHorizontal"
+                />
+            <RadioGroup
+                android:layout_weight="0"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                >
+                <RadioButton
+                    android:id="@+id/show_presets"
+                    android:text="@string/presets"
+                    android:layout_weight="1"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="0"
-                    android:prompt="@string/profiles"
                     />
-                <ListView
-                    android:id="@+id/presets"
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                <RadioButton
+                    android:id="@+id/show_results"
+                    android:text="@string/results"
                     android:layout_weight="1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
                     />
-            </LinearLayout>
-            <ScrollView
+            </RadioGroup>
+            <ViewFlipper
+                android:id="@+id/preset_flipper"
+                android:layout_weight="1"
                 android:layout_height="fill_parent"
                 android:layout_width="fill_parent"
                 >
-                <TableLayout
-                    android:id="@+id/log"
+                <LinearLayout
                     android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:stretchColumns="0, 1, 2"
+                    android:orientation="vertical"
                     >
-                </TableLayout>
-            </ScrollView>
-        </ViewFlipper>
-        <LinearLayout
-            android:layout_weight="0"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <TextView
-                android:id="@+id/result_log4"
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/result_log"
-                />
-            <TextView
-                android:id="@+id/result_log3"
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/result_log"
-                />
-            <TextView
-                android:id="@+id/result_log2"
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/result_log"
-                />
-            <TextView
-                android:id="@+id/result_log1"
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/result_log1"
-                />
-            <TextView
-                android:id="@+id/result"
-                android:text=""
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                style="@style/result"
-                />
-        </LinearLayout>
-        <LinearLayout
-            android:layout_weight="0"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <Button
-                android:id="@+id/roll"
-                android:text="@string/roll"
-                android:layout_weight="1"
+                    <Spinner
+                        android:id="@+id/profiles"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0"
+                        android:prompt="@string/profiles"
+                        />
+                    <ListView
+                        android:id="@+id/presets"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_weight="1"
+                        />
+                </LinearLayout>
+                <ScrollView
+                    android:layout_height="fill_parent"
+                    android:layout_width="fill_parent"
+                    >
+                    <TableLayout
+                        android:id="@+id/log"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:stretchColumns="0, 1, 2"
+                        >
+                    </TableLayout>
+                </ScrollView>
+            </ViewFlipper>
+            <LinearLayout
+                android:layout_weight="0"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:focusableInTouchMode="true"
+                android:orientation="horizontal"
                 >
-                <requestFocus/>
-            </Button>
-            <Button
-                android:id="@+id/reset"
-                android:text="@string/reset"
-                android:layout_weight="1"
+                <TextView
+                    android:id="@+id/result_log4"
+                    android:text=""
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    style="@style/result_log"
+                    />
+                <TextView
+                    android:id="@+id/result_log3"
+                    android:text=""
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    style="@style/result_log"
+                    />
+                <TextView
+                    android:id="@+id/result_log2"
+                    android:text=""
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    style="@style/result_log"
+                    />
+                <TextView
+                    android:id="@+id/result_log1"
+                    android:text=""
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    style="@style/result_log1"
+                    />
+                <TextView
+                    android:id="@+id/result"
+                    android:text=""
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    style="@style/result"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_weight="0"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                />
+                android:orientation="horizontal"
+                >
+                <Button
+                    android:id="@+id/roll"
+                    android:text="@string/roll"
+                    android:layout_weight="1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:focusableInTouchMode="true"
+                    >
+                    <requestFocus/>
+                </Button>
+                <Button
+                    android:id="@+id/reset"
+                    android:text="@string/reset"
+                    android:layout_weight="1"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
