--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -31,6 +31,7 @@
         android:orientation="horizontal"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
+        android:baselineAligned="false"
         >
         <ScrollView
             android:layout_width="wrap_content"
@@ -55,19 +56,31 @@
             <TextView
                 android:id="@+id/config"
                 android:text="@string/empty_config"
-                android:layout_weight="0"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="@style/config"
                 />
-            <TextView
-                android:id="@+id/range"
-                android:text=""
-                android:layout_weight="0"
+            <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                style="@style/range"
-                />
+                android:orientation="horizontal"
+                android:baselineAligned="false"
+                >
+                <TextView
+                    android:id="@+id/range_label"
+                    android:text="@string/range"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+                <TextView
+                    android:id="@+id/range"
+                    android:text=""
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="right"
+                    style="@style/range"
+                    />
+            </LinearLayout>
             <ProgressBar
                 android:id="@+id/result_bar"
                 android:layout_width="fill_parent"
@@ -79,6 +92,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
+                android:paddingTop="8dp"
                 >
                 <RadioButton
                     android:id="@+id/show_presets"
@@ -127,7 +141,7 @@
                     <TableLayout
                         android:id="@+id/log"
                         android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
+                        android:layout_height="wrap_content"
                         android:stretchColumns="0, 1, 2"
                         >
                     </TableLayout>
