--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -93,6 +93,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingTop="8dp"
+                android:paddingBottom="8dp"
                 >
                 <RadioButton
                     android:id="@+id/show_presets"
@@ -132,6 +133,7 @@
                         android:layout_width="fill_parent"
                         android:layout_height="fill_parent"
                         android:layout_weight="1"
+                        android:paddingTop="8dp"
                         />
                 </LinearLayout>
                 <ScrollView
