--- a/android/res/layout/counter.xml
+++ b/android/res/layout/counter.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:gravity="right"
-        android:numeric="integer"
+        android:inputType="number"
         android:selectAllOnFocus="true"
         android:text="0"
         />
