--- a/android/res/layout/dx.xml
+++ b/android/res/layout/dx.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:gravity="right"
-        android:numeric="integer"
+        android:inputType="number"
         android:selectAllOnFocus="true"
         android:text="3"
         />
@@ -29,7 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0"
         android:gravity="right"
-        android:numeric="integer"
+        android:inputType="number"
         android:selectAllOnFocus="true"
         android:text="0"
         />
