--- a/android/res/layout/name_preset.xml
+++ b/android/res/layout/name_preset.xml
@@ -31,6 +31,8 @@
         android:id="@+id/name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:inputType="text"
+        android:hint="@string/name_preset_hint"
         />
     <LinearLayout
         android:layout_width="fill_parent"
