--- a/android/res/layout/name_profile.xml
+++ b/android/res/layout/name_profile.xml
@@ -11,41 +11,19 @@
     which can be found in the file LICENSE at the top level of the source code.
     -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
-    <TextView
-        android:id="@+id/header"
-        android:text="@string/name_profile"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        />
     <EditText
         android:id="@+id/profile_name"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="16dp"
         android:inputType="text"
         android:hint="@string/name_profile_hint"
         />
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
-        <Button
-            android:id="@+id/cancel"
-            android:text="@string/cancel"
-            android:layout_weight="1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            />
-        <Button
-            android:id="@+id/ok"
-            android:text="@string/ok"
-            android:layout_weight="1"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            />
-    </LinearLayout>
 </LinearLayout>
