Replace instances of android layout 'fill_parent' with 'match_parent'.
These have the same functional meaning, but the Android guys changed the
officially blessed name to 'match_parent' in API Level 8, because they
felt that 'fill' gave the wrong impression.

--- a/android/res/layout/preset.xml
+++ b/android/res/layout/preset.xml
@@ -11,7 +11,7 @@
     which can be found in the file LICENSE at the top level of the source code.
     -->
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     style="@style/preset"
     />
