--- a/android/res/layout/add_inc.xml
+++ b/android/res/layout/add_inc.xml
@@ -11,30 +11,30 @@
     which can be found in the file LICENSE at the top level of the source code.
     -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
     <TextView
         android:id="@+id/header"
         android:text="@string/add_inc_msg"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
     <TextView
         android:id="@+id/config"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/config"
         />
     <Spinner
         android:id="@+id/presets"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:prompt="@string/add_inc_msg"
         />
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
@@ -42,14 +42,14 @@
             android:id="@+id/cancel"
             android:text="@string/cancel"
             android:layout_weight="1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
         <Button
             android:id="@+id/ok"
             android:text="@string/ok"
             android:layout_weight="1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
     </LinearLayout>
