--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -26,8 +26,8 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="horizontal"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
@@ -46,8 +46,8 @@
             </TableLayout>
         </ScrollView>
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical"
             android:paddingLeft="8dp"
@@ -61,7 +61,7 @@
                 style="@style/config"
                 />
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:baselineAligned="false"
@@ -75,7 +75,7 @@
                 <TextView
                     android:id="@+id/range"
                     android:text=""
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="right"
                     style="@style/range"
@@ -83,13 +83,13 @@
             </LinearLayout>
             <ProgressBar
                 android:id="@+id/result_bar"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 style="?android:attr/progressBarStyleHorizontal"
                 />
             <RadioGroup
                 android:layout_weight="0"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingTop="8dp"
@@ -99,50 +99,50 @@
                     android:id="@+id/show_presets"
                     android:text="@string/presets"
                     android:layout_weight="1"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
                 <RadioButton
                     android:id="@+id/show_results"
                     android:text="@string/results"
                     android:layout_weight="1"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
             </RadioGroup>
             <ViewFlipper
                 android:id="@+id/preset_flipper"
                 android:layout_weight="1"
-                android:layout_height="fill_parent"
-                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
                 >
                 <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="fill_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     >
                     <Spinner
                         android:id="@+id/profiles"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="0"
                         android:prompt="@string/profiles"
                         />
                     <ListView
                         android:id="@+id/presets"
-                        android:layout_width="fill_parent"
-                        android:layout_height="fill_parent"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:paddingTop="8dp"
                         />
                 </LinearLayout>
                 <ScrollView
-                    android:layout_height="fill_parent"
-                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
                     >
                     <TableLayout
                         android:id="@+id/log"
-                        android:layout_width="fill_parent"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:stretchColumns="0, 1, 2"
                         >
@@ -151,7 +151,7 @@
             </ViewFlipper>
             <LinearLayout
                 android:layout_weight="0"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 >
@@ -198,7 +198,7 @@
             </LinearLayout>
             <LinearLayout
                 android:layout_weight="0"
-                android:layout_width="fill_parent"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 >
@@ -206,14 +206,14 @@
                     android:id="@+id/reset"
                     android:text="@string/reset"
                     android:layout_weight="1"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     />
                 <Button
                     android:id="@+id/roll"
                     android:text="@string/roll"
                     android:layout_weight="1"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:focusableInTouchMode="true"
                     >
