--- a/android/res/layout/name_preset.xml
+++ b/android/res/layout/name_preset.xml
@@ -11,31 +11,31 @@
     which can be found in the file LICENSE at the top level of the source code.
     -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >
     <TextView
         android:id="@+id/header"
         android:text="@string/name_preset"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
     <TextView
         android:id="@+id/config"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/config"
         />
     <EditText
         android:id="@+id/name"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:hint="@string/name_preset_hint"
         />
     <LinearLayout
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         >
@@ -43,14 +43,14 @@
             android:id="@+id/cancel"
             android:text="@string/cancel"
             android:layout_weight="1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
         <Button
             android:id="@+id/ok"
             android:text="@string/ok"
             android:layout_weight="1"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             />
     </LinearLayout>
