--- a/android/res/values/style.xml
+++ b/android/res/values/style.xml
@@ -12,14 +12,15 @@
     -->
 <resources>
     <style name="result" parent="@android:style/TextAppearance.Large">
-        <item name="android:gravity">right</item>
+        <item name="android:gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">42sp</item>
     </style>
     <style name="result_log1" parent="@android:style/TextAppearance.Medium">
-        <item name="android:gravity">right</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
     <style name="result_log" parent="@android:style/TextAppearance.Small">
-        <item name="android:gravity">right</item>
+        <item name="android:gravity">center_horizontal</item>
     </style>
     <style name="config" parent="@android:style/TextAppearance.Large">
         <item name="android:gravity">center_horizontal</item>
