Apply custom theme on top of AppCompat.Light.NoActionBar.
I am using a theme based on the Material Indigo colour palette.  I had
originally intended to use a dark colour for the app bar, but had
difficulty figuring out how to get Android to automatically render the
menu icons in the appropriate colour (they were showing as black over a
dark background).  Perhaps something to try another time.

--- a/android/res/values/style.xml
+++ b/android/res/values/style.xml
@@ -11,6 +11,11 @@
     which can be found in the file LICENSE at the top level of the source code.
     -->
 <resources>
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+        <item name="colorAccent">@color/accent</item>
+    </style>
     <style name="result" parent="@android:style/TextAppearance.Large">
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textStyle">bold</item>
