Fix table layout of dice counter UI.
Turns out that I had been doing this wrong the whole time.
Instantiating a class that extends from TableRow, and inflating an XML
layout into it which has a TableRow root node actually yields a TableRow
inside another TableRow.

The correct approach for a situation like this is to use a <merge> node
as the root node of the XML, which actually collapses to be no node at
all once it is inflated.

Also, add a little "d" label in front of the dX sides input, to
hopefully make it more clear what these inputs do.

--- a/android/res/layout/counter.xml
+++ b/android/res/layout/counter.xml
@@ -10,23 +10,19 @@
     third is open-source, licensed under the Simplified BSD License, a copy of
     which can be found in the file LICENSE at the top level of the source code.
     -->
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingRight="4dip"
-    >
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
     <ImageButton
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
         />
     <EditText
         android:id="@+id/counter"
         android:layout_width="48dip"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
         android:gravity="right"
         android:inputType="numberSigned"
         android:selectAllOnFocus="true"
         android:text="0"
         />
-</TableRow>
+</merge>
