--- a/android/res/layout/dx.xml
+++ b/android/res/layout/dx.xml
@@ -10,27 +10,37 @@
     third is open-source, licensed under the Simplified BSD License, a copy of
     which can be found in the file LICENSE at the top level of the source code.
     -->
-<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingRight="4dip"
-    >
-    <EditText
-        android:id="@+id/dx_sides"
-        android:layout_width="48dip"
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
+        android:orientation="horizontal"
+        android:baselineAligned="true"
         android:gravity="right"
-        android:inputType="number"
-        android:selectAllOnFocus="true"
-        android:text="3"
-        />
+        >
+        <TextView
+            android:id="@+id/dx_label"
+            android:text="d"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+        <EditText
+            android:id="@+id/dx_sides"
+            android:layout_width="32dp"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:inputType="number"
+            android:selectAllOnFocus="true"
+            android:text="3"
+            />
+    </LinearLayout>
     <EditText
         android:id="@+id/dx"
         android:layout_width="48dip"
         android:layout_height="wrap_content"
-        android:layout_weight="0"
         android:gravity="right"
         android:inputType="numberSigned"
         android:selectAllOnFocus="true"
         android:text="0"
         />
-</TableRow>
+</merge>
