--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -42,6 +42,8 @@
                 android:id="@+id/counters"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:paddingRight="16dp"
+                android:paddingLeft="8dp"
                 >
             </TableLayout>
         </ScrollView>
