--- a/android/res/layout/main.xml
+++ b/android/res/layout/main.xml
@@ -102,13 +102,42 @@
                     android:layout_gravity="top"
                     />
             </android.support.v4.view.ViewPager>
-            <TextView
-                android:id="@+id/result"
-                android:text=""
+            <LinearLayout
+                android:layout_weight="0"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/result"
-                />
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="4dp"
+                android:orientation="horizontal"
+                android:gravity="bottom"
+                >
+                <ImageView
+                    android:id="@+id/result_min"
+                    android:src="@drawable/ic_thumb_down_black_24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:scaleType="center"
+                    android:visibility="invisible"
+                    />
+                <TextView
+                    android:id="@+id/result"
+                    android:text=""
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    style="@style/result"
+                    />
+                <ImageView
+                    android:id="@+id/result_max"
+                    android:src="@drawable/ic_thumb_up_black_24dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:scaleType="center"
+                    android:visibility="invisible"
+                    />
+            </LinearLayout>
             <LinearLayout
                 android:layout_weight="0"
                 android:layout_width="match_parent"
